--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -7,29 +7,45 @@ commonAnnotations:
   cfa-base-version: v0.1.0
 
 resources:
-- deploy.yaml
-- hpa.yaml
-- pdb.yaml
-- sa.yaml
-- smon.yaml
-- svc.yaml
+  - deploy.yaml
+  - hpa.yaml
+  - pdb.yaml
+  - sa.yaml
+  - smon.yaml
+  - svc.yaml
 
-vars:
-- name: SVC_NAME
-  objref:
-    kind: Service
-    name: service
-    apiVersion: v1
-  fieldref:
-    fieldpath: metadata.name
-- name: SVC_NAMESPACE
-  objref:
-    kind: Service
-    name: service
-    apiVersion: v1
-  fieldref:
-    fieldpath: metadata.namespace
+labels:
+  - pairs:
+      app.kubernetes.io/managed-by: kustomize
+      monitoring: enabled
+    fieldSpecs:
+      - path: metadata/labels
+        kind: ServiceMonitor
+      - path: spec/selector/matchLabels
+        kind: Deployment
+      - path: spec/selector/matchLabels
+        kind: Service
+
+replacements:
+  - source:
+      kind: Service
+      name: service
+      fieldPath: metadata.name
+    targets:
+      - select:
+          kind: Deployment
+        fieldPaths:
+          - spec/template/spec/containers[]/env[]/value
+  - source:
+      kind: Service
+      name: service
+      fieldPath: metadata.namespace
+    targets:
+      - select:
+          kind: Deployment
+        fieldPaths:
+          - spec/template/spec/containers[]/env[]/value
 
 configurations:
-- conf/smon.yaml
-- conf/transformers.yaml
+  - conf/smon.yaml
+  - conf/transformers.yaml
