--- a/base/hpa.yaml
+++ b/base/hpa.yaml
@@ -1,7 +1,9 @@
-apiVersion: autoscaling/v2beta1
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: hpa
+  labels:
+    owner: cfa
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -13,4 +15,6 @@ spec:
   - type: Resource
     resource:
       name: cpu
-      targetAverageUtilization: 80
+      target:
+        type: Utilization
+        averageUtilization: 80
