Update pipeline and structure

--- a/backend/overlays/kustomization.yaml
+++ b/backend/overlays/kustomization.yaml
@@ -2,8 +2,7 @@ resources:
   - ../../base
 
 commonLabels:
-  app: python-api
-  owner: cfa
+  tier: frontend
 
 commonAnnotations:
-  cfa-base-name: python-api
+  cfa-base-name: frontend
