--- a/base/conf/smon.yaml
+++ b/base/conf/smon.yaml
@@ -1,11 +1,4 @@
-apiVersion: builtin
-kind: LabelTransformer
-metadata:
-  name: service-monitor-labels
-labels:
-  app.kubernetes.io/managed-by: kustomize
-  monitoring: enabled
-fieldSpecs:
-  - path: spec/selector/matchLabels
-    create: true
-    kind: ServiceMonitor
+commonlabels:
+- path: spec/selector/matchLabels
+  create: true
+  kind: ServiceMonitor
