--- a/go-api/overlays/kustomization.yaml
+++ b/go-api/overlays/kustomization.yaml
@@ -2,8 +2,9 @@ resources:
   - ../../base  # Pulling in the shared base configuration
 
 patches:
-  - patches/deploy.yaml   # Applying customizations for go-api
-  - patches/hpa.yaml      # Applying HPA patch if needed
+  - path: patches/deploy.yaml   # Applying customizations for go-api
+    target:
+      kind: Deployment
 
 commonLabels:
   app: go-api
