--- a/base/conf/transformers.yaml
+++ b/base/conf/transformers.yaml
@@ -1,27 +1,13 @@
-apiVersion: builtin
-kind: NameReferenceTransformer
-metadata:
-  name: name-references
-nameReferences:
-  - kind: Service
-    fieldSpecs:
-      - path: metadata/annotations/getambassador.io/config
-  - kind: Mapping
-    fieldSpecs:
-      - path: spec/service
-  - kind: Deployment
-    fieldSpecs:
-      - path: spec/template/spec/containers[]/env[]/value
-  - kind: ServiceMonitor
-    fieldSpecs:
-      - path: spec/namespaceSelector/matchNames[]
+varReference:
+- path: metadata/annotations/getambassador.io\/config
+  kind: Service
+- path: spec/service
+  kind: Mapping
+- path: spec/template/spec/containers[]/env[]/value
+  kind: Deployment
+- path: spec/namespaceSelector/matchNames[]
+  kind: ServiceMonitor
 
----
-apiVersion: builtin
-kind: PrefixSuffixTransformer
-metadata:
-  name: name-prefix-suffix
-prefix: ""
-fieldSpecs:
-  - path: spec/template/spec/containers/name
-  - path: spec/jobTemplate/spec/template/spec/containers/name
+namePrefix:
+- path: spec/template/spec/containers/name
+- path: spec/jobTemplate/spec/template/spec/containers/name
