--- a/base/hpa.yaml
+++ b/base/hpa.yaml
@@ -1,9 +1,7 @@
-apiVersion: autoscaling/v2
+apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
   name: hpa
-  labels:
-    owner: cfa
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -15,6 +13,4 @@ spec:
   - type: Resource
     resource:
       name: cpu
-      target:
-        type: Utilization
-        averageUtilization: 80
+      targetAverageUtilization: 80
