--- a/base/pdb.yaml
+++ b/base/pdb.yaml
@@ -1,11 +1,9 @@
-apiVersion: policy/v1
+apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
   name: pdb
-  labels:
-    owner: cfa
 spec:
   maxUnavailable: 1
   selector:
     matchLabels:
-      owner: cfa
+      app: application
