--- a/go-api/overlays/patches/deploy.yaml
+++ b/go-api/overlays/patches/deploy.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: deployment
+  namespace: default
 spec:
   revisionHistoryLimit: 2
   template:
