Revert base config

--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,40 +1,4 @@
-# namespace: default
-
-# commonLabels:
-#   owner: cfa
-
-# commonAnnotations:
-#   cfa-base-version: v0.1.0
-
-# resources:
-# - deploy.yaml
-# - hpa.yaml
-# - pdb.yaml
-# - sa.yaml
-# - smon.yaml
-# - svc.yaml
-
-# vars:
-# - name: SVC_NAME
-#   objref:
-#     kind: Service
-#     name: service
-#     apiVersion: v1
-#   fieldref:
-#     fieldpath: metadata.name
-# - name: SVC_NAMESPACE
-#   objref:
-#     kind: Service
-#     name: service
-#     apiVersion: v1
-#   fieldref:
-#     fieldpath: metadata.namespace
-
-# configurations:
-# - conf/smon.yaml
-# - conf/transformers.yaml
-
-# namespace: default
+namespace: default
 
 commonLabels:
   owner: cfa
@@ -50,26 +14,21 @@ resources:
 - smon.yaml
 - svc.yaml
 
-replacements:
-- source:
+vars:
+- name: SVC_NAME
+  objref:
     kind: Service
     name: service
-    fieldPath: metadata.name
-  targets:
-  - select:
-      kind: Deployment
-    fieldPaths:
-    - spec.template.spec.containers[0].env[?(@.name=="SVC_NAME")].value
-
-- source:
+    apiVersion: v1
+  fieldref:
+    fieldpath: metadata.name
+- name: SVC_NAMESPACE
+  objref:
     kind: Service
     name: service
-    fieldPath: metadata.namespace
-  targets:
-  - select:
-      kind: Deployment
-    fieldPaths:
-    - spec.template.spec.containers[0].env[?(@.name=="SVC_NAMESPACE")].value
+    apiVersion: v1
+  fieldref:
+    fieldpath: metadata.namespace
 
 configurations:
 - conf/smon.yaml
