fix(k8s): Use JSON PatchTransformer for securityContext

--- a/base/conf/sc.yaml
+++ b/base/conf/sc.yaml
@@ -3,18 +3,21 @@ kind: PatchTransformer
 metadata:
   name: security-context-patch
 patch: |-
-  spec:
-    template:
-      spec:
-        containers:
-        - securityContext:
-            allowPrivilegeEscalation: false
-            capabilities:
-              drop:
-                - ALL
-            readOnlyRootFilesystem: true
-            runAsGroup: 3000
-            runAsNonRoot: true
-            runAsUser: 1000
+  [
+    {
+      "op": "add",
+      "path": "/spec/template/spec/containers/0/securityContext",
+      "value": {
+        "allowPrivilegeEscalation": false,
+        "capabilities": {
+          "drop": ["ALL"]
+        },
+        "readOnlyRootFilesystem": true,
+        "runAsGroup": 3000,
+        "runAsNonRoot": true,
+        "runAsUser": 1000
+      }
+    }
+  ]
 target:
   kind: Deployment
