--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,39 +1,3 @@
-# namespace: default
-
-# commonLabels:
-#   owner: cfa
-
-# commonAnnotations:
-#   cfa-base-version: v0.1.0
-
-# resources:
-# - deploy.yaml
-# - hpa.yaml
-# - pdb.yaml
-# - sa.yaml
-# - smon.yaml
-# - svc.yaml
-
-# vars:
-# - name: SVC_NAME
-#   objref:
-#     kind: Service
-#     name: service
-#     apiVersion: v1
-#   fieldref:
-#     fieldpath: metadata.name
-# - name: SVC_NAMESPACE
-#   objref:
-#     kind: Service
-#     name: service
-#     apiVersion: v1
-#   fieldref:
-#     fieldpath: metadata.namespace
-
-# configurations:
-# - conf/smon.yaml
-# - conf/transformers.yaml
-
 namespace: default
 
 commonLabels:
@@ -72,3 +36,5 @@ configurations:
 
 transformers:
   - conf/sc.yaml
+  - conf/affinity.yaml
+  - conf/sp.yaml
